--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "tw-elements-react": "^1.0.0-alpha2",
     "web-vitals": "^2.1.4"
